# pyTastpardy

./: .gitignore  README.md  configexample.json  pyproject.toml
scripts/: db_creator.py  one_question_trivia_game.py  random_question_example.py
src/tastpardy/: __main__.py  db.py  game.py  irc.py
tastpardy/: __main__.py  command.py  config.py  db.py  game.py  irc.py  models.py
