[build-system]
requires = ['setuptools', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'tastpardy'
authors = [{name = 'Jay Faulkner', email = 'jay@jvf.cc'}]
description = 'Tasty game where you I give you the food and you tell me the order.'
readme = 'README.md'
requires-python = '>=3.10'
keywords = ['irc', 'bot', 'trivia']
license = {text = 'MIT'}
classifiers = ['Programming Language :: Python :: 3.10']
dependencies = [
    'click',
    'dataclasses_json',
    'eventlet',
    'irc',
    'pyyaml',
    'python-Levenshtein',
    'sqlalchemy>=2.0',
    'thefuzz',
    'thefuzz[speedup]',
]
dynamic = ['version']

[project.optional-dependencies]
dev = [
    'black',
    'types-pyyaml',
    'sqlalchemy[mypy]',
    'mypy',
    'mypy-extensions',
]
openai = [
    'openai'
]

[tool.mypy]
disable_error_code = 'annotation-unchecked'
